--- a/riskCOVID/local.html
+++ b/riskCOVID/local.html
@@ -34,28 +34,27 @@
         </form>
     </nav>
     <div id="mapid"></div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="row">
-                <div class="card border-warning mb-3">
-                    <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis dolore doloremque doloribus eius ex facilis harum iste iusto modi natus nesciunt odio officiis, quae reprehenderit saepe sunt tempora voluptatum.</p>
+    <div class="container-fluid h-100">
+        <div class="row justify-content-center h-100">
+            <div class="col-lg-6">
+                <div class="h-100 d-flex flex-column">
+                    <div class="row justify-content-center bg-purple">
+                        <div class="text-white">
+                            <div style="height:100px">Risk Icons</div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center bg-blue flex-grow-1">
+                        <div class="text-white">Advice Summary</div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="card">
-                    <div class="card-body">
-                        <h5>Government advice</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis dolore doloremque doloribus eius ex facilis harum iste iusto modi natus nesciunt odio officiis, quae reprehenderit saepe sunt tempora voluptatum.</p>
-                    </div>
-                </div>
+            <div class="col-lg-6 bg-gray text-white">
+                <p>Government Advice, national graph, statistics etc.</p>
             </div>
-        </div>
-        <div class="col-md-6">
-
         </div>
     </div>
+    </div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -76,23 +75,29 @@
     //
     var lon = sessionStorage.getItem("longitude");
     var lat = sessionStorage.getItem("latitude");
-    var mymap = L.map('mapid').setView([lat, lon], 13);
+    var mymap = L.map('mapid').setView([lat, lon], 12);
 
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
         maxZoom: 18,
         attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
             '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
             'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-        id: 'mapbox.streets'
+        id: 'mapbox/streets-v11',
+        tileSize: 512,
+        zoomOffset:-1,
     }).addTo(mymap);
+
+
+
+
 
     function style(feature) {
         return {
-            fillColor: getColor(feature.properties.population),
-            weight: 0.3,
+            fillColor: getColor(feature.properties.score),
+            weight: 0.25,
             opacity: 1,
             color: 'black',
-            fillOpacity: 0.5
+            fillOpacity: 0.3
         };
     }
 
@@ -106,14 +111,10 @@
     L.marker([lat, lon]).addTo(mymap);
 
     function getColor(d) {
-        return d > 20000 ? '#800026' :
-            d > 15000  ? '#BD0026' :
-            d > 10000  ? '#E31A1C' :
-            d > 8000  ? '#FC4E2A' :
-            d > 6000   ? '#FD8D3C' :
-            d > 4000   ? '#FEB24C' :
-            d > 2000   ? '#FED976' :
-                        '#FFEDA0';
+        return d > 10 ? '#800026' :
+            d > 1  ? '#FFD300' :
+            d >= 0 ? '#80C904':
+                        'transparent';
     }
 
 
