Updated Case Rate Text

--- a/riskCOVID/local.html
+++ b/riskCOVID/local.html
@@ -107,7 +107,7 @@
                                     </div>
                                     <div class="col-sm-4">
                                         <h3>Case Rate</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cum cumque ducimus enim ex itaque labore laudantium libero minima, modi natus officia reiciendis rem sit soluta tempora totam unde. Dolorem!</p>
+                                        <p>A detailed chart showing how the estimated daily cases per 100,000 people has changed over the last 30 days. The current rate as of today is approximately <span id="currentRate" style="font-family: 'Source Code Pro'; font-weight: bold; font-size: large"></span>.</p>
                                     </div>
                                 </div>
 
