--- a/riskCOVID/index.html
+++ b/riskCOVID/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md justify-content-between">
-      <a class="navbar-brand"><img src="img/navbrand.svg" alt=""></a>
+      <a class="navbar-brand"><img src="img/navbrand.png" alt=""></a>
       <form class="mx-2 my-auto d-inline w-100" id="searchForm">
         <div class="input-group">
           <input type="text" id="selector" class="form-control" placeholder="Search for your town or postcode...">
