--- a/riskCOVID/local.html
+++ b/riskCOVID/local.html
@@ -28,7 +28,7 @@
 </head>
 <body onload="boot()">
     <nav class="navbar navbar-expand-md justify-content-between">
-        <div class="navbar-brand" ><a href="index.html"><img src="img/navbrand.svg" alt=""></a></div>
+        <div class="navbar-brand" ><a href="index.html"><img src="img/navbrand.png" alt=""></a></div>
         <form class="mx-2 my-auto d-inline w-100" id="searchForm">
             <div class="input-group">
                 <input type="text" id="selector" class="form-control" placeholder="Search for another area...">
