--- a/riskCOVID/local.html
+++ b/riskCOVID/local.html
@@ -218,8 +218,8 @@
         document.getElementById("riskScale").setAttribute("src", '');
     }
     function getColor(d) {
-        return d > 30 ? '#ff0034' :
-            d > 1  ? '#FFD300' :
+        return d >= 3.51 ? '#ff0034' :
+            d >= 0.71  ? '#FFD300' :
                 d >= 0 ? '#80C904':
                     'transparent';
     }
