--- a/riskCOVID/local.html
+++ b/riskCOVID/local.html
@@ -61,7 +61,7 @@
                         <div class="row" id="summary-text">
                             <p class="card-text">This area of <span id="placeName"></span> is currently <em id="riskLevel"></em>. <span id="adviceSummary"></span>.</p>
                             <p>The risk levels are estimated using nationwide case rate data, and the distribution of COVID related deaths.
-                                <a href="#"> Learn more.</a></p>
+                                <a href="https://riskyviz.github.io/webapp/"> Learn more.</a></p>
                         </div>
                     </div>
                     <div class="card-header">
