--- a/riskCOVID/local.html
+++ b/riskCOVID/local.html
@@ -183,15 +183,13 @@
     var lat = sessionStorage.getItem("latitude");
     var mymap = L.map('mapid').setView([lat, lon], 12);
 
-    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+    L.tileLayer('https://a.tile.openstreetmap.de/{z}/{x}/{y}.png', {
         maxZoom: 18,
-        minZoom: 10,
+        minZoom: 8,
         attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-            '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-            'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-        id: 'mapbox/streets-v11',
+            '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ',
         tileSize: 512,
-        zoomOffset:-1,
+        zoomOffset: -1,
     }).addTo(mymap);
 
     var logoIcon = L.icon({
